[feature] zlink Start/Stop Script